[gd_scene load_steps=4 format=2]

[ext_resource path="res://ToggleLanguage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 668.0
custom_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 30.0
custom_constants/separation = 24
alignment = 1

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 572.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Тренировка Слов"
align = 1

[node name="ToggleLanguage" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 596.0
margin_right = 824.0

[node name="WordsList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 824.0
margin_bottom = 514.0
size_flags_vertical = 3
custom_constants/vseparation = 7
custom_constants/line_separation = 3
custom_constants/icon_margin = 4
custom_constants/hseparation = 2
items = [ "House - Дом", null, false, "Children - Дети", null, false, "Love - Любовь", null, false ]

[node name="StartTrain" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 538.0
margin_right = 824.0
margin_bottom = 568.0
text = "Начать тренировку"

[connection signal="language_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ToggleLanguage" to="." method="_on_ToggleLanguage_language_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartTrain" to="." method="_on_StartTrain_pressed"]
